# Datathon

./: .env.example  .gitignore  PRD.md  README.md  app-config.json  package.json  pnpm-lock.yaml  render.yaml  start.js
apps/ml-service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
apps/ml-service/app/: cli.py  train.py
apps/ml-service/app/core/: __init__.py  config.py
apps/ml-service/app/models/: __init__.py  anomaly_detector.py  clustering_model.py  crime_dna_encoder.py  forecasting_model.py
apps/ml-service/app/routers/: anomaly.py  assistant.py  clustering.py  crime_dna.py  forecasting.py  graph.py  similarity.py
apps/ml-service/app/schemas/: __init__.py
apps/ml-service/app/utils/: __init__.py
apps/ml-service/model_cache/: forecasting_model.json
apps/web/: .env.example  next.config.ts  package-lock.json  package.json
apps/web/src/: proxy.ts
apps/web/src/app/: global-error.tsx  globals.css  layout.tsx
apps/web/src/app/ai/: error.tsx  loading.tsx
apps/web/src/app/dashboard/: error.tsx  loading.tsx  page.tsx
apps/web/src/app/intelligence/: error.tsx  loading.tsx
apps/web/src/components/ai/: AnomalyAlert.tsx  ChatInterface.tsx  FIRSummary.tsx  FeatureImportance.tsx  HotspotOverlay.tsx  PredictionCard.tsx  SHAPExplanation.tsx  SimilarityResult.tsx
apps/web/src/components/intelligence/: ClusterScatter.tsx  CrimeDNAVisualizer.tsx  CriminalScoreCard.tsx  ErrorCard.tsx  EvolutionTimeline.tsx  ForceGraph.tsx  GangNetwork.tsx  MOSimilarityMatrix.tsx  NetworkExplorer.tsx
apps/web/src/components/layout/: AppShell.tsx  (+2 more)
apps/web/src/hooks/: useApi.ts  useLocalStorage.ts  useMediaQuery.ts
apps/web/src/lib/: api.ts  auth.ts  ml.ts  prisma.ts  utils.ts
prisma/: schema.prisma  views.sql
scripts/: deploy-catalyst.ps1  fix-users.ts  patch-next.mjs  seed.ts  setup.ps1
(+64 files in other folders)
